コード整理: 非推奨API修正と未使用import削除
- WalaAnalyzer: 未使用import(Atom)を削除
- WalaAnalyzer: makeZeroCFABuilder非推奨API修正
- WalaAnalyzer: Iterator使用をenhanced forループに変更
- CallGraphRunner: getOptionValueメソッドを統合、.getFirst()使用
- build.gradle: コンパイル時に非推奨警告を有効化
- コード品質向上とモダンなJava APIの採用

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>